# nes

./: .envrc  Headless Demo.ipynb  README.md  pyproject.toml  setup.py
nes/cycore/: ._memory.html  apu.html  bitwise.html  carts.html  memory.html  memory.pxd  memory.pyx  mos6502.html  mos6502.pxd  mos6502.pyx  ppu.html  ppu.pxd  ppu.pyx  ppu.pyxa  system.html  system.pxd  system.pyx
